feat: fix README.md